@@ -174,7 +174,7 @@ public class FasUsageServiceTest {
         payee.setAccountNumber(PAYEE_ACCOUNT_NUMBER);
         rollUps.put(RH_ID, ImmutableMap.of(FAS_PRODUCT_FAMILY, payee));
         Map<String, Table<String, String, Object>> preferences = new HashMap<>();
-        expect(prmIntegrationService.getRollUps(Collections.singleton(RH_ID))).andReturn(rollUps).once();
+        expect(prmIntegrationService.getRollUps(Set.of(RH_ID))).andReturn(rollUps).once();
         expect(prmIntegrationService.getPreferences(Sets.newHashSet(payee.getId(), RH_ID)))
             .andReturn(preferences).once();
         usageRepository.addToScenario(usages);
@@ -231,7 +231,7 @@ public class FasUsageServiceTest {
         Set<String> usageIds =
             Sets.newHashSet("095eaefe-37de-4adb-928e-be0b888094b9", "7ee9c1ab-57ca-45cf-8a8d-83d7baeb6a9c");
         Set<Long> accountNumbers = Sets.newHashSet(2000017001L, 2000078999L);
-        Set<String> scenarioIds = Collections.singleton(scenario.getId());
+        Set<String> scenarioIds = Set.of(scenario.getId());
         expect(fasUsageRepository.deleteFromScenarioByPayees(scenarioIds, accountNumbers, USER_NAME))
             .andReturn(usageIds).once();
         usageAuditService.logAction(usageIds, UsageActionTypeEnum.EXCLUDED_FROM_SCENARIO, REASON);
@@ -246,7 +246,7 @@ public class FasUsageServiceTest {
         Set<String> usageIds =
             Sets.newHashSet("2db4877e-e89c-40f3-8c9a-21d8903fac88", "4a324301-d4a4-4639-ac4f-8a75d86b6048");
         Set<Long> accountNumbers = Sets.newHashSet(2000017001L, 2000078999L);
-        Set<String> scenarioIds = Collections.singleton(scenario.getId());
+        Set<String> scenarioIds = Set.of(scenario.getId());
         expect(fasUsageRepository.redesignateToNtsWithdrawnByPayees(scenarioIds, accountNumbers, USER_NAME))
             .andReturn(usageIds).once();
         usageAuditService.logAction(usageIds, UsageActionTypeEnum.EXCLUDED_FROM_SCENARIO, REASON);
@@ -258,8 +258,8 @@ public class FasUsageServiceTest {
 
     @Test
     public void testGetAccountNumbersInvalidForExclude() {
-        Set<String> scenarioIds = Collections.singleton(scenario.getId());
-        Set<Long> payeeAccountNumbers = Collections.singleton(PAYEE_ACCOUNT_NUMBER);
+        Set<String> scenarioIds = Set.of(scenario.getId());
+        Set<Long> payeeAccountNumbers = Set.of(PAYEE_ACCOUNT_NUMBER);
         expect(fasUsageRepository.findAccountNumbersInvalidForExclude(scenarioIds, payeeAccountNumbers))
             .andReturn(payeeAccountNumbers).once();
         replay(fasUsageRepository);
